--- a/public/index.html
+++ b/public/index.html
@@ -2,33 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cibus - Restaurnts powered by AI</title>
-    <meta name="author" content="Cibus AI" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="GoSkripto Inc" />
     <meta
       name="keywords"
-      content="QR Ordering, KDS, Restaurant Management, Restaurant Software"
+      content="AI Script Management, Content Copyrighting, Copyrighting for Authors"
     />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta property="og:title" content="Cibus" />
+    <meta property="og:title" content="GoSkripto" />
     <meta
       property="og:description"
-      content="One-Stop Restaurant Managemetn System"
+      content="Your One Stop Online Copyrighting"
     />
     <meta
       property="og:image"
-      content="https://storage.googleapis.com/flutterflow-io-6f20.appspot.com/projects/cibus-24-xltqas/assets/oz1jmffpi9c0/cibus_icon.png"
+      content="https://firebasestorage.googleapis.com/v0/b/goskripto.appspot.com/o/statics%2FgoScripto%20Icon.png?alt=media&token=6dbb5afa-3a73-4c69-b99e-3217f1cb37e2"
     />
-    <meta property="og:url" content="https://cibus.app/" />
+    <meta property="og:url" content="https://goskipto.com/" />
     <meta property="og:type" content="website" />
-
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="One-Stop Restaurant Managemetn System" />
     <!-- favicon icon -->
-    <link rel="shortcut icon" href="images/favicon.png" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png" />
+    <link rel="shortcut icon" href="favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://firebasestorage.googleapis.com/v0/b/goskripto.appspot.com/o/statics%2FgoScripto%20Icon.png?alt=media&token=6dbb5afa-3a73-4c69-b99e-3217f1cb37e2"
+    />
 
     <!-- Method 1: HTML meta refresh -->
     <meta http-equiv="refresh" content="0; url=en/en.html" />
@@ -37,6 +34,7 @@
     <script>
       window.location.href = "en/en.html";
     </script>
+    <title>Go Skitpto - The Introduction</title>
   </head>
   <body>
     <p>
